Finish up getchoices and fix homepage
Done with getchoices. Problem with footer again. Footer overlap other content in the homepage.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,6 +33,7 @@ section name comments
     line-height: 72px;
     color: #262261; /* add color of the heading */
     font-weight: 400; /* add regular style to heading */
+    width: 920px; /* add width of the heading */
 }
 
 .search {
@@ -90,6 +91,9 @@ section name comments
 }
 
 .BtnFindOut {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     font-size: 32px;
@@ -100,6 +104,8 @@ section name comments
     background-color: #469D8C;
     border-radius: 15px;
     border: 0;
+    width: 204px; /* add width of the button */
+    height: 72px;
 }
 
 .BtnFindOut:focus {
@@ -222,7 +228,8 @@ section name comments
     flex-grow: 0;
 }
 
-/* SECTION 4 WEEKLY TIPS */
+
+/* SECTION 4 WEEKLY TIPS button arrow delay until hackathon done - not working for now 
 .DirectBtn {
     background-color: #469D8C;
     color: #FFF;
@@ -231,4 +238,4 @@ section name comments
     padding: 12px 16px;
     width: 74px;
     height: 74px;
-}
+}*/
