--- a/styles/getchoices.module.css
+++ b/styles/getchoices.module.css
@@ -21,6 +21,7 @@
     margin-left: '120px';
 }
 
+/* button describe - bisa balik ke describe buat edit formnya */
 .ChoicesDescribe {
     font-size: 40px;
     line-height: 60px;
@@ -32,6 +33,7 @@
     height: 60px;
     left: 592px;
     top: 220px;
+    border: 0;
 }
 
 .GetChoice {
@@ -66,7 +68,7 @@
     text-align: center;
     position: absolute;
     height: 48px;
-    left: 680px;
+    left: 692px;
     top: 320px;
     width: 550px;
     height: 48px;
@@ -127,7 +129,7 @@
     background: #469D8C;
     border-radius: 15px;
     border: 0;
-    left: 34%;
+    left: 881px;
 
     text-align: center;
     font-family: 'Poppins';
@@ -147,7 +149,7 @@
     text-align: center;
     position: absolute;
     height: 48px;
-    left: 920px;
+    left: 937px;
     top: 663px;
 }
 
@@ -173,18 +175,111 @@
     font-weight: 400;
     text-align: center;
     top: 800px;
-    left: 680px;
+    left: 694px;
     position: absolute;
 }
 
-/* Upcycle card choice 1 (text) */
+/* DIY Title #1 */
 .DiyTitle1 {
-    font-style: normal;
     font-weight: 600;
     font-size: 24px;
     line-height: 36px;
     position: absolute;
     width: 340px;
     height: 72px;
+    color: #323232;
 }
 
+/* DIY Choice #1 subtext */
+.DiyDesc1 {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 33px;
+    color: #323232;
+    position: absolute;
+    width: 751px;
+    height: 66px;
+}
+
+/* link to DIY step 1 */
+.hyperlink1 {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 33px;
+    text-decoration-line: underline;
+    color: #323232;
+    width: 751px;
+    height: 66px;
+}
+
+/* change color on hyperlink step */
+.hyperlink1:hover {
+    color:#469D8C;
+}
+
+/* the Save button */
+.BtnSave {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 12px 32px;
+    gap: 10px;
+
+    position: absolute;
+    width: 125px;
+    height: 60px;
+    background: #469D8C;
+    border-radius: 15px!important;
+    border: 0;
+
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+
+}
+
+/* submit button */
+.BtnSubmit1 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 12px 32px;
+    gap: 10px;
+
+    position: absolute;
+    width: 217px;
+    height: 60px;
+    background: #3C3871;
+    border-radius: 15px!important;
+    border: 0;
+
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+/* the image cant go to the right side - not working */
+.SixDrawer {
+    position: relative;
+    border-radius: 15px!important;
+    object-fit: fill;
+    object-position: right top; 
+    display: flex;
+}
+
+/* Address of store under image */
+.Address1 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #323232;
+    position: absolute;
+    width: 170px;
+    height: 60px;
+    text-align: center;
+
+}
